# FFmpeg

./: CMakeLists.txt  CreateSDK.cmake  Jenkinsfile  README.md  build-env-win64.bat  make-linux.sh  make-macos.sh  make-win-msvc-2019.bat
cmake/toolchains/: clang_x64_macos_10.13.cmake
